change update interval unit from senconds to minutes

--- a/custom_component/linkstation/translations/en.json
+++ b/custom_component/linkstation/translations/en.json
@@ -13,7 +13,7 @@
         "step": {
             "init": {
                 "data": {
-                    "scan_interval": "Update frequency (seconds)",
+                    "scan_interval": "Update frequency (minutes)",
                     "host": "LinkStation IP",
                     "username": "Admin Username",
                     "password": "Admin Password"
